--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -18,10 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "soy mayor\n",
+      "soy menor\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 7\n",
+    "if (num> 0):\n",
+    "    print (\"soy mayor\")\n",
+    "else:\n",
+    "     (num < 0)\n",
+    "print (\"soy menor\")"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no somos iguales :(\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"carlos\"\n",
+    "b = 12\n",
+    "\n",
+    "if type(a) == type(b):\n",
+    "    print ('somos iguales :yip:')\n",
+    "else:\n",
+    "    print ('no somos iguales :(')"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +80,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 somosss primosss\n",
+      "1 no somos primos :(\n",
+      "2 somosss primosss\n",
+      "3 no somos primos :(\n",
+      "4 somosss primosss\n",
+      "5 no somos primos :(\n",
+      "6 somosss primosss\n",
+      "7 no somos primos :(\n",
+      "8 somosss primosss\n",
+      "9 no somos primos :(\n",
+      "10 somosss primosss\n",
+      "11 no somos primos :(\n",
+      "12 somosss primosss\n",
+      "13 no somos primos :(\n",
+      "14 somosss primosss\n",
+      "15 no somos primos :(\n",
+      "16 somosss primosss\n",
+      "17 no somos primos :(\n",
+      "18 somosss primosss\n",
+      "19 no somos primos :(\n",
+      "20 somosss primosss\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(20+1):\n",
+    "    if i % 2 == 0:\n",
+    "        print (i, \"somosss primosss\") \n",
+    "    else:\n",
+    "        print (i, \"no somos primos :(\")   "
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +129,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "for i in range(x):\n",
+    "    print (i**3)\n"
+   ]
   },
   {
    "attachments": {},
@@ -80,8 +162,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 5\n",
+    "for i in range(num):\n",
+    "    print(i)"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +191,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el factorial es 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "num =5\n",
+    "if (type(num)==int):\n",
+    "    if (num > 2):\n",
+    "        factorial= num\n",
+    "        while (num > 2):\n",
+    "            num = num -1\n",
+    "            factorial = factorial * num\n",
+    "        print (\"el factorial es\", factorial)\n",
+    "    else:\n",
+    "        print ('la variable es mayor a cero')\n",
+    "else:\n",
+    "    print(\"la variable no es un entero\")"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numero = 5\n",
+    "while (numero > 6):\n",
+    "    for numero in (1,5):\n",
+    "        print (numero)\n"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +247,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in  range(1,5):\n",
+    "    x = 3\n",
+    "    while (x >  1):\n",
+    "        print (x)\n",
+    "        break"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +279,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "11\n",
+      "12\n",
+      "12\n",
+      "13\n",
+      "13\n",
+      "14\n",
+      "14\n",
+      "15\n",
+      "15\n",
+      "16\n",
+      "16\n",
+      "17\n",
+      "17\n",
+      "18\n",
+      "18\n",
+      "19\n",
+      "19\n",
+      "20\n",
+      "20\n",
+      "21\n",
+      "21\n",
+      "22\n",
+      "22\n",
+      "23\n",
+      "23\n",
+      "24\n",
+      "24\n",
+      "25\n",
+      "25\n",
+      "26\n",
+      "26\n",
+      "27\n",
+      "27\n",
+      "28\n",
+      "28\n",
+      "29\n",
+      "29\n",
+      "30\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(0, 30+1):\n",
+    "    print (num)\n",
+    "    if (num > 10):\n",
+    "        print (num)"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +357,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(0, 30+1):\n",
+    "    print (num)\n",
+    "    if (num > 10):\n",
+    "        break\n",
+    "    if (num <5):\n",
+    "        continue"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +413,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108 es divisible por 12\n",
+      "120 es divisible por 12\n",
+      "132 es divisible por 12\n",
+      "144 es divisible por 12\n",
+      "156 es divisible por 12\n",
+      "168 es divisible por 12\n",
+      "180 es divisible por 12\n",
+      "192 es divisible por 12\n",
+      "204 es divisible por 12\n",
+      "216 es divisible por 12\n",
+      "228 es divisible por 12\n",
+      "240 es divisible por 12\n",
+      "252 es divisible por 12\n",
+      "264 es divisible por 12\n",
+      "276 es divisible por 12\n",
+      "288 es divisible por 12\n",
+      "300 es divisible por 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 99\n",
+    "while (num <= 300):\n",
+    "    num +=1\n",
+    "    if (num % 12 != 0):\n",
+    "        continue\n",
+    "    print (num, \"es divisible por 12\")"
+   ]
   },
   {
    "attachments": {},
@@ -200,7 +461,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "¿Desea encontrar el siguiente número primo?\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -220,11 +490,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c85384e4cb51c8b72350f3a8712cc8351fdc3955e32a27f9b60c6242ab125f01"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -238,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
